--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.h5 filter=lfs diff=lfs merge=lfs -text
 weights/DeepLabV3_based_on_ResNet50.h5 filter=lfs diff=lfs merge=lfs -text
+weights/DeepLabV3Plus_based_on_Xception-DeepLab.h5 filter=lfs diff=lfs merge=lfs -text
